--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,11 +58,11 @@ svg {
   height: auto;
   max-width: 100%;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: auto;
-  min-height: 100vh;
-  scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
 }
 
@@ -245,3 +245,4 @@ p {
 .test {
   background: red !important;
 }
+
